# smarthouse-arduino

./: CMakeLists.txt  README  README.md
Kitchen/: Arduino.ino  Kitchen.ino  LEDs.cpp  LEDs.h  Networking.cpp  Networking.h  Parsing.cpp  Parsing.h  Storage.cpp  Storage.h  Types.h
LightSwitchAC/: LightSwitchAC.ino  Relay.cpp
MotionLightWithRelay/: MotionLightWithRelay.ino
libraries/LEDFader/: LEDFader.cpp  LEDFader.h
libraries/Logging/: Logging.cpp  Logging.h
libraries/MsTimer2/: MsTimer2.cpp
libraries/MsTimer2/examples/FlashLed/: FlashLed.pde
libraries/MySensors-2.0/: keywords.txt
libraries/MySensors-2.0/core/: MyHwATMega328.cpp  MyHwESP8266.cpp  MyHwSAMD.cpp  MyMessage.h  MySensorsCore.cpp  MySigning.cpp  MyTransport.cpp
libraries/MySensors-2.0/drivers/ATSHA204/: ATSHA204.cpp
libraries/MySensors-2.0/drivers/AVR/DigitalIO/: SoftI2cMaster.cpp  SoftI2cMaster.h
libraries/MySensors-2.0/drivers/AVR/DigitalIO/examples/DigitalPinShiftOut/: DigitalPinShiftOut.ino
libraries/MySensors-2.0/drivers/AVR/DigitalIO/examples/ScanI2cBus/: ScanI2cBus.ino
libraries/MySensors-2.0/drivers/PubSubClient/: README.md
libraries/MySensors-2.0/drivers/RF24/: RF24.cpp
libraries/MySensors-2.0/drivers/RFM69/: RFM69.cpp
libraries/MySensors-2.0/examples/BinarySwitchSleepSensor/: BinarySwitchSleepSensor.ino
libraries/MySensors-2.0/examples/EnergyMeterPulseSensor/: EnergyMeterPulseSensor.ino
libraries/MySensors-2.0/examples/MockMySensors/: MockMySensors.ino
libraries/MySensors-2.0/examples/SecretKnockSensor/: SecretKnockSensor.ino
libraries/MySensors-2.0/examples/SecurityPersonalizer/: sha204_library.cpp
libraries/MySensors-2.0/examples/SoilMoistSensor/: SoilMoistSensor.ino
libraries/MySensors-2.0/examples/WaterMeterPulseSensor/: WaterMeterPulseSensor.ino
libraries/NewButton/: NewButton.cpp  NewButton.h
libraries/SoftTimer/examples/SoftTimer8Dimmer/: SoftTimer8Dimmer.ino
libraries/SoftTimer/src/: BlinkTask.h  FrequencyTask.h  TonePlayer.h
sketches/Kitchen/: Kitchen.ino  LEDs.cpp  LEDs.h  Networking.cpp  Parsing.cpp  Parsing.h  README.md  Storage.cpp  Storage.h  Types.h
sketches/LightSwitchAC/: LightSwitchAC.ino  README.md  Relay.cpp  Relay.h
sketches/MotionLightWithRelay/: MotionLightWithRelay.ino
tests/: build.gradle  main.cpp
tests/mocks/: Arduino.cpp  Arduino.h  Bounce2.cpp  Bounce2.h  EEPROM.h  LEDFader.h  Logging.h  MsTimer2.cpp  MsTimer2.h  MySensors.cpp  MySensors.h  NewButton.h  TimerOne.h
tests/mocks/base/: NiceMock.h  StaticMock.h
tests/tests/: MotionLightWithRelayTests.cpp
tests/tests/Kitchen/: KitchenTests.cpp  LedsTests.cpp  NetworkingTests.cpp  ParsingTests.cpp  StorageTests.cpp
tests/tests/LightSwitchACTests/: LightSwitchACTests.cpp
tests/tests/MotionLightWithRelayTests/: MotionLightWithRelayTests.cpp
